# ts_atspec

./: .gitignore  .ts_pre_commit_config.yaml  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py
.github/workflows/: enforce_rebase.yaml
bin.src/: atspec_csc.py
conda/: meta.yaml
doc/: conf.py  index.rst  version-history.rst  version_history.rst
doc/configuration/: configuration.rst
doc/developer-guide/: developer-guide.rst
doc/user-guide/: user-guide.rst
python/lsst/ts/atspectrograph/: __init__.py  atspec_csc.py  config_schema.py  mock_controller.py  model.py
python/lsst/ts/atspectrograph/config/: config.yaml
schema/: ATSpectrograph.yaml
tests/: piped_output_for_tiago.txt  test_csc.py
ups/: ts_atspectrograph.table
