[build-system]
requires = [ "setuptools", "setuptools_scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "ts-atspec"
description = "CSC for the Auxiliary Telescope Spectrograph."
license = { text = "GPL" }
classifiers = [ "Programming Language :: Python :: 3" ]
urls = { documentation = "https://jira.lsstcorp.org/secure/Dashboard.jspa", repository = "https://github.com/lsst-ts/ts_atspec" }
dynamic = [ "version" ]

[project.scripts]
run_atspectrograph_csc = "lsst.ts.atspectrograph.atspec_csc:run_atspectrograph_csc"

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
  "documenteer[pipelines]",
]
